实现上线接口功能 + 创建sdk + 优化调用模拟接口的方式为“读取配置文件中的ip地址 加 接口url”,实现软编码

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -101,3 +101,6 @@ knife4j:
         api-rule: package
         api-rule-resources:
           - com.jackqiu.jackapi.controller
+api:
+  client:
+    gateway-host: http://localhost:8102
