--- a/pom.xml
+++ b/pom.xml
@@ -27,12 +27,11 @@
             <groupId>com.jackqiu.jackapi</groupId>
             <artifactId>jackapi-backend-common</artifactId>
             <version>0.0.1-SNAPSHOT</version>
-<!--            <exclusions>-->
-<!--                <exclusion>-->
-<!--                    <groupId>mysql</groupId>-->
-<!--                    <artifactId>mysql-connector-java</artifactId>-->
-<!--                </exclusion>-->
-<!--            </exclusions>-->
+        </dependency>
+        <dependency>
+            <groupId>com.jackqiu.jackapi</groupId>
+            <artifactId>jackapi-backend-sdk</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
