--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.7.2</version>
+        <version>2.7.5</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.yupi</groupId>
@@ -21,8 +21,25 @@
 <!--    </modules>-->
     <properties>
         <java.version>1.8</java.version>
+        <spring-cloud.version>2021.0.3</spring-cloud.version>
     </properties>
     <dependencies>
+        <dependency>
+            <groupId>org.apache.dubbo</groupId>
+            <artifactId>dubbo</artifactId>
+            <version>3.0.9</version>
+        </dependency>
+        <dependency>
+            <groupId>com.alibaba.nacos</groupId>
+            <artifactId>nacos-client</artifactId>
+            <version>2.1.0</version>
+        </dependency>
+        <!-- Introduce Dubbo Nacos extension, or you can add Nacos dependency directly as shown above-->
+       <dependency>
+           <groupId>org.apache.dubbo</groupId>
+           <artifactId>dubbo-registry-nacos</artifactId>
+           <version>3.0.9</version>
+       </dependency>
         <dependency>
             <groupId>com.jackqiu.jackapi</groupId>
             <artifactId>jackapi-backend-common</artifactId>
