--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,13 @@
            <artifactId>dubbo-registry-nacos</artifactId>
            <version>3.0.9</version>
        </dependency>
+
+        <!-- Alibaba Spring Context extension -->
+        <dependency>
+            <groupId>com.alibaba.spring</groupId>
+            <artifactId>spring-context-support</artifactId>
+            <version>1.0.11</version>
+        </dependency>
         <dependency>
             <groupId>com.jackqiu.jackapi</groupId>
             <artifactId>jackapi-backend-common</artifactId>
